# velox

./: CMakeLists.txt  开发日志.txt
CMake/resolve_dependency_modules/: absl.cmake  c-ares.cmake  cpr.cmake  curl.cmake  duckdb.cmake  fastfloat.cmake  fmt.cmake  gflags.cmake  glog.cmake  grpc.cmake  mygporca.cmake  protobuf.cmake  simdjson.cmake  stemmer.cmake  xsimd.cmake
CMake/resolve_dependency_modules/arrow/: CMakeLists.txt
CMake/resolve_dependency_modules/boost/: CMakeLists.txt
CMake/resolve_dependency_modules/folly/: CMakeLists.txt
scripts/: setup-helper-functions.sh
third_libs/arrow-apache-arrow-15.0.0/cpp/cmake_modules/: ThirdpartyToolchain.cmake
third_libs/c-ares-cares-1_13_0/: CMakeLists.txt  ares_config.h.cmake  ares_init.c  configure.ac
third_libs/cpr-1.10.5/: CMakeLists.txt
third_libs/cpr-1.10.5/cpr/: multiperform.cpp
third_libs/cpr-1.10.5/include/cpr/: util.h
third_libs/duckdb-0.8.1/: CMakeLists.txt
third_libs/folly/: CMakeLists.txt
third_libs/gflags-2.2.2/cmake/: config.cmake.in
third_libs/glog-0.6.0/: CMakeLists.txt  glog-config.cmake.in
third_libs/libstemmer_c-2.2.0/: Makefile  stemwords
third_libs/libstemmer_c-2.2.0/src/libstemmer-stamp/: libstemmer-source_dirinfo.txt
velox/: CMakeLists.txt
velox/functions/sparksql/: Hash.cpp
velox/orca_test/: CMakeLists.txt  MyGPOrcaTest.cpp
velox/parse/tests/: CMakeLists.txt  MyGPOrcaTest.cpp
